[package]
name = "health_info_calculator"
version = "0.1.0"
authors = ["baca217 <baca217@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = {version = "1.0.125", features = ["deserialize_in_place"] } 
tokio = { version = "1.4.0", features = ["full"] }
crossterm = "0.16.0"
percent-encoding = "2.1.0"
druid = "0.7.0"
